--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,21 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header class="navigation-top">
+      <h1>Atlas divin</h1>
+      <img
+        class="navigation-icon"
+        src="img/burger.svg"
+        alt="Icon menu burger"
+      />
+    </header>
+    <ul class="navigation-burger navigation-hidden">
+      <li><a class="navigation-text" href="#" alt="Accueil">Accueil</a></li>
+      <li><a class="navigation-text" href="#" alt="Blog">Blog</a></li>
+      <li><a class="navigation-text" href="#" alt="Conseils">Conseils</a></li>
+      <li><a class="navigation-text" href="#" alt="A propos">A propos</a></li>
+      <li><a class="navigation-text" href="#" alt="Contact">Contact</a></li>
+    </ul>
 
     <script src="js/main.js" type="module"></script>
   </body>
