Articles and bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -64,13 +64,13 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col"><h1>Voir les dieux des panthéons</h1></div>
+          <div class="col-8  col-lg-9 offset-lg-3"><h1>Voir les dieux des panthéons</h1></div>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-          <div class="col">
+          <div class="col   col-lg-9 offset-lg-3">
             <section>
               <h2>Dieu du jour</h2>
               <h3>Bacchus</h3>
@@ -96,18 +96,190 @@
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-12">
+            <div class="col-12  col-lg-3">
               <h5>Panthéons populaires</h5>
-              <a href="#">Panthéon grec</a>
-              <a href="#">Panthéon égyptien</a>
-              <a href="#">Panthéon nordique</a>
-              <a href="#">Panthéon romain</a>
+              <div><a href="#">Panthéon grec</a></div>
+              <div><a href="#">Panthéon égyptien</a></div>
+              <div><a href="#">Panthéon nordique</a></div>
+              <div><a href="#">Panthéon romain</a></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-12   col-lg-9 offset-lg-3">
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Athéna</h2>
+                <div>
+                  <p>Panthéon grec</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse de la guerre</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Mars</h2>
+                <div>
+                  <p>Panthéon romain</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu de la guerre</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Ra</h2>
+                <div>
+                  <p>Panthéon égyptien</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu créateur</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Freya</h2>
+                <div>
+                  <p>Panthéon nordique</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse de la fertilité</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Loki</h2>
+                <div>
+                  <p>Panthéon nordique</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu du chaos</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Fortuna</h2>
+                <div>
+                  <p>Panthéon romain</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse de la bonne fortune</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Artémis</h2>
+                <div>
+                  <p>Panthéon grec</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse de la chasse</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Anubis</h2>
+                <div>
+                  <p>Panthéon égyptien</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu funéraire</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Zeus</h2>
+                <div>
+                  <p>Panthéon grec</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu du ciel</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Lucifer</h2>
+                <div>
+                  <p>Panthéon romain</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Dieu des étoiles</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Hel</h2>
+                <div>
+                  <p>Panthéon nordique</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse des enfers</p>
+              </article>
+              <article>
+                <img src="img/burger.svg" alt="" />
+                <img src="img/burger.svg" alt="" />
+                <h2>Isis</h2>
+                <div>
+                  <p>Panthéon égyptien</p>
+                  <img src="img/burger.svg" alt="" />
+                </div>
+                <p>Déesse mère</p>
+              </article>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+<ul">
+                <li>
+                  <a class="navigation-text" href="#" alt="Accueil"
+                    >Mes favoris</a
+                  >
+                </li>
+                <li>
+                  <a class="navigation-text" href="#" alt="Blog"
+                    >Dieu du jour</a
+                  >
+                </li>
+                <li>
+                  <a class="navigation-text" href="#" alt="Conseils"
+                    >Dieux populaires</a
+                  >
+                </li>
+                <li>
+                  <a class="navigation-text" href="#" alt="Conseils"
+                    >Politique de confidentialité</a
+                  >
+                </li>
+              </ul>
+                 <button>
+                <img
+                  src="img/burger.svg"
+                  alt="Icon menu burger"
+                />
+              </button>
+                 <button>
+                <img
+                  src="img/burger.svg"
+                  alt="Icon menu burger"
+                />
+              </button>
+                 <button>
+                <img
+                  src="img/burger.svg"
+                  alt="Icon menu burger"
+                />
+              </button>
+              <div></div>
+              <p>Atlas Divin @ 2025. Tous droits réservés </p>
+    </footer>
 
     <script src="js/main.js" type="module"></script>
   </body>
