--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,19 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet"> 
+</head>
   <body>
     <div class="container">
       <header class="navigation-top">
         <div class="row">
           <div class="col">
-            <a href="#">Atlas divin</a>
+            <a class="header-logo" href="#">Atlas divin</a>
           </div>
           <div class="col">
             <nav>
@@ -62,7 +68,7 @@
     </div>
 
     <main>
-      <div class="container">
+      <div class="container title">
         <div class="row">
           <div class="col-8  col-lg-9 offset-lg-3"><h1>Voir les dieux des panthéons</h1></div>
         </div>
@@ -71,21 +77,21 @@
       <div class="container">
         <div class="row">
           <div class="col   col-lg-9 offset-lg-3">
-            <section>
-              <h2>Dieu du jour</h2>
-              <h3>Bacchus</h3>
-              <p>Dieu romain du vin</p>
-              <p>
+            <section class="daily-god">
+              <h2 class="daily-god-title">Dieu du jour</h2>
+              <h3 class="daily-god-second-title">Bacchus</h3>
+              <p class="daily-god-p">Dieu romain du vin</p>
+              <p class="daily-god-p">
                 Egalement Dieu de l'ivresse, des débordements, de la nature et
                 des festivités.
               </p>
-              <p>
+              <p class="daily-god-p">
                 Bacchus est un dieu romain correspondant à Dionysos dans
                 la mythologie grecque. Les Romains utilisaient Bacchus comme un
                 autre nom de Liber Pater, un dieu latin de la fécondité.
               </p>
-              <div>
-                <a href="#">En savoir plus</a>
+              <div class="daily-god-more">
+                <a class="daily-god-p daily-god-a" href="#">En savoir plus</a>
                 <img src="img/burger.svg" alt="" />
               </div>
             </section>
@@ -94,14 +100,14 @@
       </div>
 
       <section>
-        <div class="container">
+        <div class="container filters-spacing">
           <div class="row">
             <div class="col-12  col-lg-3">
-              <h5>Panthéons populaires</h5>
-              <div><a href="#">Panthéon grec</a></div>
-              <div><a href="#">Panthéon égyptien</a></div>
-              <div><a href="#">Panthéon nordique</a></div>
-              <div><a href="#">Panthéon romain</a></div>
+              <h2 class="filters-title">Panthéons populaires</h2>
+              <div class="filters filters-blue"><a href="#">Panthéon grec</a></div>
+              <div class="filters filters-yellow"><a href="#">Panthéon égyptien</a></div>
+              <div class="filters filters-green"><a href="#">Panthéon nordique</a></div>
+              <div class="filters filters-red"><a href="#">Panthéon romain</a></div>
             </div>
           </div>
         </div>
