fixing the spacing

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,19 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap" rel="stylesheet"> 
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bubbler+One&display=swap"
+      rel="stylesheet"
+    />
+  </head>
   <body>
     <div class="container">
       <header class="navigation-top">
@@ -70,13 +76,15 @@
     <main>
       <div class="container title">
         <div class="row">
-          <div class="col-8  col-lg-9 offset-lg-3"><h1>Voir les dieux des panthéons</h1></div>
+          <div class="col-8 col-lg-9 offset-lg-3">
+            <h1>Voir les dieux des panthéons</h1>
+          </div>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-          <div class="col   col-lg-9 offset-lg-3">
+          <div class="col-12 col-lg-9 offset-lg-3">
             <section class="daily-god">
               <h2 class="daily-god-title">Dieu du jour</h2>
               <h3 class="daily-god-second-title">Bacchus</h3>
@@ -102,12 +110,20 @@
       <section>
         <div class="container filters-spacing">
           <div class="row">
-            <div class="col-12  col-lg-3">
+            <div class="col-12 col-lg-3">
               <h2 class="filters-title">Panthéons populaires</h2>
-              <div class="filters filters-blue"><a href="#">Panthéon grec</a></div>
-              <div class="filters filters-yellow"><a href="#">Panthéon égyptien</a></div>
-              <div class="filters filters-green"><a href="#">Panthéon nordique</a></div>
-              <div class="filters filters-red"><a href="#">Panthéon romain</a></div>
+              <div class="filters filters-blue">
+                <a href="#">Panthéon grec</a>
+              </div>
+              <div class="filters filters-yellow">
+                <a href="#">Panthéon égyptien</a>
+              </div>
+              <div class="filters filters-green">
+                <a href="#">Panthéon nordique</a>
+              </div>
+              <div class="filters filters-red">
+                <a href="#">Panthéon romain</a>
+              </div>
             </div>
           </div>
         </div>
@@ -116,7 +132,7 @@
       <section>
         <div class="container">
           <div class="row">
-            <div class="col-12   col-lg-9 offset-lg-3">
+            <div class="col-12 col-lg-9 offset-lg-3">
               <article>
                 <img src="img/burger.svg" alt="" />
                 <img src="img/burger.svg" alt="" />
@@ -243,48 +259,43 @@
       </section>
     </main>
     <footer>
-<ul">
-                <li>
-                  <a class="navigation-text" href="#" alt="Accueil"
-                    >Mes favoris</a
-                  >
-                </li>
-                <li>
-                  <a class="navigation-text" href="#" alt="Blog"
-                    >Dieu du jour</a
-                  >
-                </li>
-                <li>
-                  <a class="navigation-text" href="#" alt="Conseils"
-                    >Dieux populaires</a
-                  >
-                </li>
-                <li>
-                  <a class="navigation-text" href="#" alt="Conseils"
-                    >Politique de confidentialité</a
-                  >
-                </li>
-              </ul>
-                 <button>
-                <img
-                  src="img/burger.svg"
-                  alt="Icon menu burger"
-                />
-              </button>
-                 <button>
-                <img
-                  src="img/burger.svg"
-                  alt="Icon menu burger"
-                />
-              </button>
-                 <button>
-                <img
-                  src="img/burger.svg"
-                  alt="Icon menu burger"
-                />
-              </button>
-              <div></div>
-              <p>Atlas Divin @ 2025. Tous droits réservés </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <ul>
+              <li>
+                <a class="navigation-text" href="#" alt="Accueil"
+                  >Mes favoris</a
+                >
+              </li>
+              <li>
+                <a class="navigation-text" href="#" alt="Blog">Dieu du jour</a>
+              </li>
+              <li>
+                <a class="navigation-text" href="#" alt="Conseils"
+                  >Dieux populaires</a
+                >
+              </li>
+              <li>
+                <a class="navigation-text" href="#" alt="Conseils"
+                  >Politique de confidentialité</a
+                >
+              </li>
+            </ul>
+            <button>
+              <img src="img/burger.svg" alt="Icon menu burger" />
+            </button>
+            <button>
+              <img src="img/burger.svg" alt="Icon menu burger" />
+            </button>
+            <button>
+              <img src="img/burger.svg" alt="Icon menu burger" />
+            </button>
+            <div></div>
+            <p>Atlas Divin @ 2025. Tous droits réservés</p>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <script src="js/main.js" type="module"></script>
