--- a/src/index.html
+++ b/src/index.html
@@ -308,7 +308,7 @@
               <div class="row">
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/athena.png" alt="Athéna" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="25"
@@ -344,7 +344,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/mars.png" alt="Mars" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -380,7 +380,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/ra.png" alt="Ra" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -416,7 +416,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/freya.png" alt="Freya" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -452,7 +452,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/loki.png" alt="Loki" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -488,7 +488,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/fortuna.png" alt="Fortuna" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -524,7 +524,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/artemis.png" alt="Artémis" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="25"
@@ -560,7 +560,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/anubis.png" alt="Anubis" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -600,7 +600,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/zeus.png" alt="Zeus" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="25"
@@ -636,7 +636,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/lucifer.png" alt="Lucifer" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
@@ -672,7 +672,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/hel.png" alt="Hel" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="25"
@@ -708,7 +708,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/burger.svg" alt="" />
+                    <img src="img/Dieux et déesses/isis.png" alt="Isis" />
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="24"
