--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <header class="navigation-top">
         <div class="row">
-          <div class="col">
+          <div class="col-12 col-lg-8">
             <a class="header-logo" href="#">Atlas divin</a>
           </div>
           <div class="col">
@@ -34,7 +34,7 @@
                   alt="Icon menu burger"
                 />
               </button>
-              <ul class="navigation-burger navigation-hidden">
+              <ul class="navigation-burger navigation-hidden navigation-list">
                 <li>
                   <a class="navigation-text" href="#" alt="Accueil"
                     >Mes favoris</a
@@ -54,9 +54,36 @@
                   <button
                     type="button"
                     id="dark-mode-btn"
-                    class="header-dark-mode-btn"
+                    class="header-dark-mode-btn switch-mode-dark"
                   >
-                    Passer au dark mode
+                    <svg
+                      class="switch-mode-dark-icon"
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="25"
+                      viewBox="0 0 24 25"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_184_782)">
+                        <path
+                          d="M12 3.5C12.132 3.5 12.263 3.5 12.393 3.5C11.1084 4.69371 10.2826 6.29984 10.0593 8.03922C9.83602 9.7786 10.2293 11.5412 11.1708 13.0207C12.1122 14.5002 13.5424 15.603 15.2126 16.1375C16.8829 16.6719 18.6876 16.6041 20.313 15.946C19.6878 17.4505 18.6658 18.757 17.3562 19.7263C16.0466 20.6955 14.4985 21.291 12.8769 21.4494C11.2554 21.6077 9.62129 21.323 8.14892 20.6254C6.67654 19.9278 5.42114 18.8437 4.51661 17.4886C3.61209 16.1335 3.09238 14.5583 3.01291 12.931C2.93345 11.3037 3.29721 9.6853 4.0654 8.24851C4.83359 6.81173 5.97739 5.61042 7.37479 4.77273C8.77219 3.93504 10.3708 3.49239 12 3.492V3.5Z"
+                          stroke="white"
+                          stroke-width="2"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_184_782">
+                          <rect
+                            width="24"
+                            height="24"
+                            fill="white"
+                            transform="translate(0 0.5)"
+                          />
+                        </clipPath>
+                      </defs>
+                    </svg>
                   </button>
                   <button
                     type="button"
@@ -756,7 +783,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <ul>
+            <ul class="navigation-list">
               <li>
                 <a class="navigation-text" href="#" alt="Accueil"
                   >Mes favoris</a
@@ -777,13 +804,54 @@
               </li>
             </ul>
             <button>
-              <img src="img/burger.svg" alt="Icon menu burger" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M17.812 5.01699H6.145C3.855 5.01699 2 6.85199 2 9.11599V14.884C2 17.148 3.856 18.984 6.145 18.984H17.812C20.102 18.984 21.957 17.148 21.957 14.884V9.11599C21.957 6.85199 20.101 5.01599 17.812 5.01599V5.01699ZM15.009 12.28L9.552 14.855C9.51872 14.871 9.48192 14.8784 9.44503 14.8763C9.40815 14.8743 9.37237 14.863 9.34103 14.8434C9.3097 14.8239 9.28382 14.7967 9.2658 14.7645C9.24779 14.7322 9.23822 14.6959 9.238 14.659V9.34999C9.23867 9.31286 9.24872 9.27651 9.26722 9.24432C9.28573 9.21212 9.31208 9.18513 9.34382 9.16587C9.37556 9.1466 9.41167 9.13568 9.44877 9.13413C9.48587 9.13258 9.52276 9.14044 9.556 9.15699L15.014 11.892C15.0504 11.9101 15.0809 11.9381 15.102 11.9728C15.1232 12.0075 15.1341 12.0474 15.1336 12.0881C15.1331 12.1287 15.1211 12.1683 15.0991 12.2025C15.077 12.2366 15.0458 12.2638 15.009 12.281V12.28Z"
+                  fill="black"
+                />
+              </svg>
             </button>
             <button>
-              <img src="img/burger.svg" alt="Icon menu burger" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M9.04598 5.865V8.613H7.03198V11.973H9.04598V21.959H13.18V11.974H15.955C15.955 11.974 16.215 10.363 16.341 8.601H13.197V6.303C13.197 5.96 13.647 5.498 14.093 5.498H16.347V2H13.283C8.94298 2 9.04598 5.363 9.04598 5.865Z"
+                  fill="black"
+                />
+              </svg>
             </button>
             <button>
-              <img src="img/burger.svg" alt="Icon menu burger" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+              >
+                <path
+                  d="M16.017 2H7.947C6.37015 2.00185 4.85844 2.62914 3.74353 3.74424C2.62862 4.85933 2.00159 6.37115 2 7.948L2 16.018C2.00185 17.5948 2.62914 19.1066 3.74424 20.2215C4.85933 21.3364 6.37115 21.9634 7.948 21.965H16.018C17.5948 21.9631 19.1066 21.3359 20.2215 20.2208C21.3364 19.1057 21.9634 17.5938 21.965 16.017V7.947C21.9631 6.37015 21.3359 4.85844 20.2208 3.74353C19.1057 2.62862 17.5938 2.00159 16.017 2V2ZM19.957 16.017C19.957 16.5344 19.8551 17.0468 19.6571 17.5248C19.4591 18.0028 19.1689 18.4371 18.803 18.803C18.4371 19.1689 18.0028 19.4591 17.5248 19.6571C17.0468 19.8551 16.5344 19.957 16.017 19.957H7.947C6.90222 19.9567 5.90032 19.5415 5.16165 18.8026C4.42297 18.0638 4.008 17.0618 4.008 16.017V7.947C4.00827 6.90222 4.42349 5.90032 5.16235 5.16165C5.90122 4.42297 6.90322 4.008 7.948 4.008H16.018C17.0628 4.00827 18.0647 4.42349 18.8034 5.16235C19.542 5.90122 19.957 6.90322 19.957 7.948V16.018V16.017Z"
+                  fill="black"
+                />
+                <path
+                  d="M11.9821 6.81897C10.6135 6.82109 9.3016 7.36576 8.33397 8.33358C7.36633 9.3014 6.82192 10.6134 6.82007 11.982C6.82166 13.3509 7.36609 14.6633 8.33397 15.6314C9.30185 16.5994 10.6142 17.1441 11.9831 17.146C13.3522 17.1444 14.6647 16.5998 15.6328 15.6317C16.6009 14.6636 17.1455 13.3511 17.1471 11.982C17.145 10.6131 16.6 9.30085 15.6318 8.33316C14.6635 7.36547 13.351 6.82129 11.9821 6.81997V6.81897ZM11.9821 15.138C11.1453 15.138 10.3428 14.8056 9.75115 14.2139C9.15947 13.6222 8.82707 12.8197 8.82707 11.983C8.82707 11.1462 9.15947 10.3437 9.75115 9.75205C10.3428 9.16037 11.1453 8.82797 11.9821 8.82797C12.8188 8.82797 13.6213 9.16037 14.213 9.75205C14.8047 10.3437 15.1371 11.1462 15.1371 11.983C15.1371 12.8197 14.8047 13.6222 14.213 14.2139C13.6213 14.8056 12.8188 15.138 11.9821 15.138Z"
+                  fill="black"
+                />
+                <path
+                  d="M17.1559 8.09497C17.8391 8.09497 18.3929 7.54115 18.3929 6.85797C18.3929 6.1748 17.8391 5.62097 17.1559 5.62097C16.4728 5.62097 15.9189 6.1748 15.9189 6.85797C15.9189 7.54115 16.4728 8.09497 17.1559 8.09497Z"
+                  fill="black"
+                />
+              </svg>
             </button>
             <div></div>
             <p>Atlas Divin @ 2025. Tous droits réservés</p>
