--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="navigation-top">
       <div class="container">
         <div class="row">
-          <div class="col-8 col-lg-8">
+          <div class="col-10 col-lg-8">
             <a class="header-logo" href="#">Atlas divin</a>
           </div>
           <div class="col">
@@ -71,8 +71,8 @@
                   </defs>
                 </svg>
               </button>
-              <div class="navigation-spacing">
-                <ul class="navigation-burger navigation-hidden navigation-list">
+              <div class="navigation-spacing navigation-hidden">
+                <ul class="navigation-list">
                   <li class="navigation-li">
                     <a class="navigation-text" href="#" alt="Accueil"
                       >Mes favoris</a
@@ -461,7 +461,8 @@
               <div class="row">
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/Dieux et déesses/athena.png" alt="Athéna" />
+                    <!-- Pas possible d'utiliser as=webp problème starterkit -->
+                    <img src="img/Dieux_et_deesses/athena.png" alt="Athéna" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -500,7 +501,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/Dieux et déesses/mars.png" alt="Mars" />
+                    <img src="img/Dieux_et_deesses/mars.png" alt="Mars" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -539,7 +540,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/Dieux et déesses/ra.png" alt="Ra" />
+                    <img src="img/Dieux_et_deesses/ra.png" alt="Ra" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -578,7 +579,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/Dieux et déesses/freya.png" alt="Freya" />
+                    <img src="img/Dieux_et_deesses/freya.png" alt="Freya" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -617,7 +618,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/Dieux et déesses/loki.png" alt="Loki" />
+                    <img src="img/Dieux_et_deesses/loki.png" alt="Loki" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -656,7 +657,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/Dieux et déesses/fortuna.png" alt="Fortuna" />
+                    <img src="img/Dieux_et_deesses/fortuna.png" alt="Fortuna" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -695,7 +696,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/Dieux et déesses/artemis.png" alt="Artémis" />
+                    <img src="img/Dieux_et_deesses/artemis.png" alt="Artémis" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -734,7 +735,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/Dieux et déesses/anubis.png" alt="Anubis" />
+                    <img src="img/Dieux_et_deesses/anubis.png" alt="Anubis" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -777,7 +778,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-blue">
-                    <img src="img/Dieux et déesses/zeus.png" alt="Zeus" />
+                    <img src="img/Dieux_et_deesses/zeus.png" alt="Zeus" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -816,7 +817,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-red">
-                    <img src="img/Dieux et déesses/lucifer.png" alt="Lucifer" />
+                    <img src="img/Dieux_et_deesses/lucifer.png" alt="Lucifer" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -855,7 +856,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-green">
-                    <img src="img/Dieux et déesses/hel.png" alt="Hel" />
+                    <img src="img/Dieux_et_deesses/hel.png" alt="Hel" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
@@ -894,7 +895,7 @@
                 </div>
                 <div class="col-6 col-lg-4">
                   <article class="article-border-yellow">
-                    <img src="img/Dieux et déesses/isis.png" alt="Isis" />
+                    <img src="img/Dieux_et_deesses/isis.png" alt="Isis" />
                     <svg
                       class="article-spacing-svg"
                       xmlns="http://www.w3.org/2000/svg"
